fix list button overflow

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -41,35 +41,12 @@ body {
     font-family: var(--font);
 }
 
-/* body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    background: var(--light-alt);
-    font-family: var(--font);
-    --light: #FFFFFF;
-    --light-alt: #F1F1F1;
-    --dark: #191f28;
-    --dark-alt: #4a4a4a;
-    --accent: #085ff3;
-    --accent-light: #4688fa;
-    --accent-dark: #0037bf;
-    --secondary: #FA745F;
-    --secondary-alt: #C75C4C;
-    --opacity: 0,0,0
-} */
-
 body.light {
     --light: #FFFFFF;
     --light-alt: #F1F1F1;
     --light-secondary: #e3e3e3;
     --dark: #191f28;
     --dark-alt: #4a4a4a;
-    --accent: #085ff3;
-    --accent-light: #4688fa;
-    --accent-dark: #0037bf;
-    --secondary: #FA745F;
-    --secondary-alt: #C75C4C;
     --opacity: 0,0,0;
     --label-color: #A6A6A6;
 }
@@ -80,11 +57,6 @@ body.dark {
     --light-secondary: #222f40;
     --dark: #FFFFFF;
     --dark-alt: #F1F1F1;
-    --accent: #085ff3;
-    --accent-light: #4688fa;
-    --accent-dark: #0037bf;
-    --secondary: #FA745F;
-    --secondary-alt: #C75C4C;
     --opacity: 255,255,255;
     --label-color: #CCC;
 }
@@ -283,6 +255,7 @@ h3 {
     text-align: center;
     box-shadow: 0px 15px 15px -10px rgba(0,0,0,0.2);
     transition: 0.3s ease;
+    overflow: hidden;
 }
 
 .dashboard-grid-item a {
@@ -313,7 +286,6 @@ h3 {
     border-radius: 10px;
     background: var(--light);
     width: 350px;
-    /* height: 540px; */
     box-shadow: 0px 15px 15px -10px rgba(0,0,0,0.2);
     transition: 0.3s ease;
 }
@@ -379,7 +351,6 @@ form div {
     font-size: .75em;
     display: none;
     position: absolute;
-    /* top: 70px; */
     bottom: 0;
     right: 20px;
     color: #ff7a7a;
@@ -440,7 +411,6 @@ form label::after {
 }
 
 .top-nav {
-    /* margin-bottom: 25px; */
     background: #191f28;
     padding: 0 35px;
 }
@@ -453,7 +423,6 @@ form label::after {
 }
 
 .top-nav li {
-    /* display: inline; */
     float: right;
 }
 
@@ -566,7 +535,6 @@ form label::after {
     color: var(--dark);
     background: none;
     margin: -5px 0;
-    /* padding: -10px 0; */
     border: none;
     cursor: pointer;
     font-size: 1.5em;
@@ -595,11 +563,9 @@ form label::after {
     width: 200px;
     padding: 10px;
     margin: -5px 10px -10px 0;
-    /* display: inline-block; */
     border: none;
     border-bottom: 2px solid var(--dark-alt);
     font-size: 1em;
-    /* font-weight: 900; */
     color: var(--dark);
     background: var(--light-alt);
     box-sizing: border-box;
@@ -654,13 +620,11 @@ form label::after {
 
 .items {
     margin-top: 150px;
-    /* padding-left: 50px; */
     width: 90vw;
 }
 
 .items ul {
     list-style: none;
-    /* display: flex; */
 }
 
 .ind-item-container {
@@ -675,7 +639,6 @@ form label::after {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    /* text-overflow: ellipsis; */
 }
 
 .item-delete {
@@ -741,7 +704,6 @@ form label::after {
     background: var(--light);
     width: 350px;
     z-index: 4;
-    /* height: 540px; */
     box-shadow: 0px 15px 15px -10px rgba(0,0,0,0.2);
     transition: 0.3s ease;
     position: relative;
